[project]
name = "rag_chat_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "openai>=2.43.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "pypdf>=6.13.3",
    "python-dotenv>=1.0.0",
]
